style(cards): resolve conflicts, make texts bold, and realign card title with first list item

--- a/editor-components/pricing-table/pricing-table14/pricing-table14.module.scss
+++ b/editor-components/pricing-table/pricing-table14/pricing-table14.module.scss
@@ -55,11 +55,13 @@
             color: var(--composer-primary-color);
             font-size: 6rem !important;
             text-align: left;
+            font-weight: 800;
           }
 
           .stat-label {
             color: var(--composer-font-color-primary);
             text-align: left;
+            font-weight: 800;
           }
         }
       }
@@ -75,6 +77,29 @@
         border: 1px solid color-mix(in srgb, var(--composer-font-color-primary) 8%, transparent);
         border-radius: var(--composer-border-radius-md);
         padding: var(--composer-gap-xl);
+        display: flex;
+        flex-direction: column;
+        gap: var(--composer-gap-lg);
+
+        .card-header {
+          .card-subtitle {
+            font-size: 1.5rem;
+            color: var(--composer-font-color-primary);
+            text-align: left;
+          }
+
+          .card-title {
+            font-size: 1.5rem;
+            color: var(--composer-font-color-primary);
+            text-align: left;
+            font-weight: 800;
+          }
+
+          .card-description {
+            color: var(--composer-font-color-primary);
+            text-align: left;
+          }
+        }
 
         .card-inner {
           display: flex;
@@ -90,21 +115,6 @@
             text-align: left;
             flex: 1;
             width: 50%;
-
-            .card-header {
-
-              .card-subtitle,
-              .card-title {
-                font-size: 1.5rem;
-                color: var(--composer-font-color-primary);
-                text-align: left;
-              }
-
-              .card-description {
-                color: var(--composer-tertiary-color);
-                text-align: left;
-              }
-            }
 
             .features-list {
               display: flex;
@@ -147,6 +157,7 @@
 
               .card-price {
                 color: var(--composer-font-color-primary);
+                font-weight: 800;
               }
 
               .card-period {
